# layin

./: .gitignore  CLAUDE.md  PLAN.md  README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/components/: ExportButton.svelte  Preview.svelte  Slot.svelte  Toolbar.svelte
src/lib/: canvas-renderer.ts  export.ts  layout.ts  paper.ts  resize.ts  types.ts
src/styles/: global.css
src/tests/: canvas-renderer.test.ts  layout.test.ts  paper.test.ts
